<?xml version="1.0"?>
<package format="3">
  <name>turtlesim_controller</name>
  <version>0.0.1</version>
  <description>Simple turtlesim controller package</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
</package>
